# iotflow-dsl

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: editor-setup.md
examples/: .keep  README.md  basic.iot  basic.json  complex_rules.iot  edge_cases.iot  home_automation.iot  multi_sensor.iot  smart_greenhouse.iot  validation_test.iot
iotflow/: __init__.py  cli.py  language.py
iotflow/generators/: __init__.py  json_generator.py  json_textx_generator.py
iotflow/grammar/: __init__.py  iotflow.tx
iotflow/model/: __init__.py  core.py  devices.py  rules.py
iotflow/parser/: metamodel.py  parse.py  preprocessors.py
iotflow/runtime/: context.py  evaluator.py  executor.py  run_result.py  runner.py  sensor_sim.py
iotflow/validators/: __init__.py  device_reference_validator.py  rule_validator.py
tests/: test_basic.py  test_preprocessor.py  test_rules.py  test_simulation.py  test_validators.py
