[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iotflow-dsl"
version = "0.1.0"
description = "IoTFlow DSL: A domain-specific language for IoT system modeling."
authors = [
    { name = "Dušica Trbović" }
]
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = [
    "textX>=3.0.0"
]

[tool.setuptools.packages.find]
where = ["."]

[project.entry-points."textx_languages"]
iotflow = "iotflow.language:iotflow_language"

[project.entry-points."textx_generators"]
"iotflow_json" = "iotflow.generators.json_textx_generator:json_generator_cli"
