[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iotflow-dsl"
version = "0.1.0"
description = "IoTFlow DSL: A domain-specific language for IoT system modeling."
authors = [
    { name = "Dušica Trbović" }
]
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = [
    "textX>=3.0.0"
]

keywords = ["dsl", "textx", "iot", "language-engineering", "domain-specific-language"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Code Generators", 
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
Repository = "https://github.com/0101dusica/iotflow-dsl"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
iotflow = ["grammar/*.tx"]

[project.entry-points."textx_languages"]
iotflow = "iotflow.language:iotflow_language"

[project.entry-points."textx_generators"]
json = "iotflow.generators.json_textx_generator:json_generator_cli"
